--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -213,38 +213,39 @@
             <point key="canvasLocation" x="6443" y="117"/>
         </scene>
         <!--Search View Controller-->
-        <scene sceneID="VeR-EC-KZg">
+        <scene sceneID="xuZ-2h-wId">
             <objects>
-                <viewController storyboardIdentifier="search" id="idg-Gr-eJb" customClass="CLSearchViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="search" id="10a-cB-MwS" customClass="CLSearchViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="BRH-hh-RM4"/>
-                        <viewControllerLayoutGuide type="bottom" id="9vx-lJ-84T"/>
+                        <viewControllerLayoutGuide type="top" id="UMX-Ot-BD0"/>
+                        <viewControllerLayoutGuide type="bottom" id="adk-Fq-mYf"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Gxg-eb-v1E">
+                    <view key="view" contentMode="scaleToFill" id="04R-lF-trY">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="r2e-CL-A5C">
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="FLJ-cr-VyQ">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <color key="barTintColor" red="0.33333333333333331" green="0.74117647058823533" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="0.32156862745098042" green="0.71372549019607845" blue="0.6705882352941176" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="r2e-CL-A5C" firstAttribute="top" secondItem="BRH-hh-RM4" secondAttribute="bottom" id="QOE-im-pZd"/>
-                            <constraint firstItem="r2e-CL-A5C" firstAttribute="leading" secondItem="Gxg-eb-v1E" secondAttribute="leading" id="Tfj-Eb-HOP"/>
-                            <constraint firstAttribute="trailing" secondItem="r2e-CL-A5C" secondAttribute="trailing" id="t2D-uz-K4g"/>
+                            <constraint firstAttribute="trailing" secondItem="FLJ-cr-VyQ" secondAttribute="trailing" id="Bd2-P1-BUW"/>
+                            <constraint firstItem="FLJ-cr-VyQ" firstAttribute="leading" secondItem="04R-lF-trY" secondAttribute="leading" id="pok-mS-3qh"/>
+                            <constraint firstItem="FLJ-cr-VyQ" firstAttribute="top" secondItem="UMX-Ot-BD0" secondAttribute="bottom" id="qY8-jC-fvK"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="zHj-fv-aTG"/>
+                    <navigationItem key="navigationItem" id="nqZ-Kg-8Nd"/>
                     <connections>
-                        <outlet property="searchBar" destination="r2e-CL-A5C" id="P9G-Uj-VPu"/>
+                        <outlet property="searchBar" destination="FLJ-cr-VyQ" id="nf0-JJ-bHT"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Rpx-Bu-Bpt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CbI-2r-Yau" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="4Ze-Ri-6ta"/>
             </objects>
-            <point key="canvasLocation" x="6443" y="786"/>
+            <point key="canvasLocation" x="8128" y="856"/>
         </scene>
         <!--Profile Table View Controller-->
         <scene sceneID="9ko-oj-kcN">
