--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -225,12 +225,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="VOp-26-9PL">
-                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <color key="barTintColor" red="0.32156862745098042" green="0.71372549019607845" blue="0.6705882352941176" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="L4d-em-WhG">
-                                <rect key="frame" x="-4" y="108" width="609" height="492"/>
+                                <rect key="frame" x="-4" y="64" width="609" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchCell" rowHeight="70" id="yfU-Fa-4tv" customClass="CLSearchCell">
@@ -240,43 +240,47 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HUj-ca-Gly">
-                                                    <rect key="frame" x="103" y="16" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="88" y="16" width="284" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="7an-ds-zAR"/>
+                                                        <constraint firstAttribute="width" constant="284" id="aQt-tn-Whk"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yeq-oc-fpe">
-                                                    <rect key="frame" x="14" y="8" width="50" height="50"/>
-                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KET-wi-mFw">
+                                                    <rect key="frame" x="88" y="37" width="284" height="21"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="syZ-OS-cGm">
                                                     <rect key="frame" x="559" y="24" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="42" id="I63-LV-I1X"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KET-wi-mFw">
-                                                    <rect key="frame" x="103" y="37" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yeq-oc-fpe">
+                                                    <rect key="frame" x="8" y="10" width="56" height="50"/>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="HUj-ca-Gly" firstAttribute="centerY" secondItem="Sr4-Bt-KW9" secondAttribute="centerY" constant="-8" id="7Dl-YE-qt1"/>
+                                                <constraint firstItem="KET-wi-mFw" firstAttribute="top" secondItem="HUj-ca-Gly" secondAttribute="bottom" id="0NS-mx-tEs"/>
+                                                <constraint firstItem="HUj-ca-Gly" firstAttribute="leading" secondItem="yeq-oc-fpe" secondAttribute="trailing" constant="24" id="48e-em-ET2"/>
+                                                <constraint firstItem="HUj-ca-Gly" firstAttribute="leading" secondItem="Sr4-Bt-KW9" secondAttribute="leading" constant="88" id="9Sh-5h-x94"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="syZ-OS-cGm" secondAttribute="trailing" id="ASH-pE-EaW"/>
-                                                <constraint firstItem="HUj-ca-Gly" firstAttribute="leading" secondItem="yeq-oc-fpe" secondAttribute="trailing" constant="39" id="BVt-nf-DVY"/>
-                                                <constraint firstItem="yeq-oc-fpe" firstAttribute="leading" secondItem="Sr4-Bt-KW9" secondAttribute="leadingMargin" constant="6" id="QjG-dh-W1o"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="yeq-oc-fpe" secondAttribute="bottom" constant="3" id="Uta-db-Shw"/>
-                                                <constraint firstItem="KET-wi-mFw" firstAttribute="leading" secondItem="HUj-ca-Gly" secondAttribute="leading" id="ZqG-Mh-BZ2"/>
-                                                <constraint firstItem="KET-wi-mFw" firstAttribute="top" secondItem="HUj-ca-Gly" secondAttribute="bottom" id="aih-5j-QCQ"/>
-                                                <constraint firstItem="KET-wi-mFw" firstAttribute="trailing" secondItem="HUj-ca-Gly" secondAttribute="trailing" id="eBH-WK-pxw"/>
-                                                <constraint firstItem="HUj-ca-Gly" firstAttribute="leading" secondItem="Sr4-Bt-KW9" secondAttribute="leading" constant="103" id="hYN-PD-Dl0"/>
-                                                <constraint firstItem="yeq-oc-fpe" firstAttribute="top" secondItem="Sr4-Bt-KW9" secondAttribute="top" constant="8" id="j3U-32-Nny"/>
+                                                <constraint firstItem="HUj-ca-Gly" firstAttribute="leading" secondItem="KET-wi-mFw" secondAttribute="leading" id="QYC-bc-DtF"/>
+                                                <constraint firstItem="yeq-oc-fpe" firstAttribute="leading" secondItem="Sr4-Bt-KW9" secondAttribute="leadingMargin" id="QjG-dh-W1o"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="yeq-oc-fpe" secondAttribute="bottom" constant="1" id="Uta-db-Shw"/>
+                                                <constraint firstItem="HUj-ca-Gly" firstAttribute="top" secondItem="Sr4-Bt-KW9" secondAttribute="topMargin" constant="8" id="dVS-1A-Amc"/>
+                                                <constraint firstItem="yeq-oc-fpe" firstAttribute="top" secondItem="Sr4-Bt-KW9" secondAttribute="top" constant="10" id="j3U-32-Nny"/>
+                                                <constraint firstItem="HUj-ca-Gly" firstAttribute="trailing" secondItem="KET-wi-mFw" secondAttribute="trailing" id="lDm-ns-qDf"/>
                                                 <constraint firstItem="syZ-OS-cGm" firstAttribute="top" secondItem="Sr4-Bt-KW9" secondAttribute="topMargin" constant="16" id="mKw-oy-91E"/>
-                                                <constraint firstItem="KET-wi-mFw" firstAttribute="bottom" secondItem="yeq-oc-fpe" secondAttribute="bottom" id="nPQ-ZT-k0h"/>
+                                                <constraint firstItem="KET-wi-mFw" firstAttribute="bottom" secondItem="yeq-oc-fpe" secondAttribute="bottom" constant="-2" id="nPQ-ZT-k0h"/>
                                                 <constraint firstItem="syZ-OS-cGm" firstAttribute="centerY" secondItem="Sr4-Bt-KW9" secondAttribute="centerY" id="zBn-vY-NkA"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -296,13 +300,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="VOp-26-9PL" firstAttribute="top" secondItem="UMX-Ot-BD0" secondAttribute="bottom" id="0U9-jf-ixK"/>
+                            <constraint firstItem="VOp-26-9PL" firstAttribute="leading" secondItem="04R-lF-trY" secondAttribute="leading" id="CWT-ty-22F"/>
                             <constraint firstAttribute="trailingMargin" secondItem="L4d-em-WhG" secondAttribute="trailing" constant="-21" id="DE6-JM-2AX"/>
-                            <constraint firstItem="VOp-26-9PL" firstAttribute="top" secondItem="UMX-Ot-BD0" secondAttribute="bottom" constant="44" id="IkN-qR-aRT"/>
-                            <constraint firstItem="L4d-em-WhG" firstAttribute="top" secondItem="VOp-26-9PL" secondAttribute="bottom" id="Uli-89-w3u"/>
+                            <constraint firstItem="VOp-26-9PL" firstAttribute="bottom" secondItem="L4d-em-WhG" secondAttribute="top" id="HUj-WK-kD0"/>
+                            <constraint firstItem="VOp-26-9PL" firstAttribute="centerX" secondItem="L4d-em-WhG" secondAttribute="centerX" id="Zvh-FC-EPc"/>
                             <constraint firstItem="adk-Fq-mYf" firstAttribute="top" secondItem="L4d-em-WhG" secondAttribute="bottom" id="hJI-b5-chd"/>
                             <constraint firstItem="L4d-em-WhG" firstAttribute="leading" secondItem="04R-lF-trY" secondAttribute="leadingMargin" constant="-20" id="k5e-du-5ea"/>
-                            <constraint firstItem="VOp-26-9PL" firstAttribute="leading" secondItem="04R-lF-trY" secondAttribute="leadingMargin" constant="-16" id="spH-5a-AtY"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="VOp-26-9PL" secondAttribute="trailing" constant="-16" id="vVd-zz-nEa"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="nqZ-Kg-8Nd"/>
@@ -314,7 +318,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CbI-2r-Yau" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <searchDisplayController id="4Ze-Ri-6ta"/>
             </objects>
-            <point key="canvasLocation" x="6443" y="866"/>
+            <point key="canvasLocation" x="6450" y="846"/>
         </scene>
         <!--Profile Table View Controller-->
         <scene sceneID="9ko-oj-kcN">
