--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -652,5 +652,23 @@
             </objects>
             <point key="canvasLocation" x="4819" y="117"/>
         </scene>
+        <!--Post View Controller-->
+        <scene sceneID="irJ-zc-3Yi">
+            <objects>
+                <viewController storyboardIdentifier="Post" id="Y1d-8n-tmI" customClass="CLPostViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8s1-Wj-ZwO"/>
+                        <viewControllerLayoutGuide type="bottom" id="sLU-Bd-k1I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="arB-OD-3UM">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cLL-fJ-2hr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4819" y="799"/>
+        </scene>
     </scenes>
 </document>
