completed navigation to group controller working on group cells

--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eIY-Me-YIN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eIY-Me-YIN">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -611,6 +611,52 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FeV-jS-6Xi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="6304" y="117"/>
+        </scene>
+        <!--Group View Controller-->
+        <scene sceneID="gKQ-hY-hbT">
+            <objects>
+                <viewController storyboardIdentifier="group" id="dYZ-SN-EYH" customClass="CLGroupViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="spA-vq-dOc"/>
+                        <viewControllerLayoutGuide type="bottom" id="gqj-ip-e3M"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7b1-TY-5EI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="140" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ylv-sc-lSC">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="groupCell" id="vsa-gx-09m" customClass="CLGroupCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vsa-gx-09m" id="Ajl-wI-ifP">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="dYZ-SN-EYH" id="9U0-iH-mLy"/>
+                                    <outlet property="delegate" destination="dYZ-SN-EYH" id="bnt-wr-Xor"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ylv-sc-lSC" secondAttribute="trailing" id="7Ac-AD-QrH"/>
+                            <constraint firstItem="ylv-sc-lSC" firstAttribute="leading" secondItem="7b1-TY-5EI" secondAttribute="leading" id="SrV-Ny-ZO0"/>
+                            <constraint firstItem="ylv-sc-lSC" firstAttribute="top" secondItem="7b1-TY-5EI" secondAttribute="top" id="jz1-aC-AdY"/>
+                            <constraint firstItem="ylv-sc-lSC" firstAttribute="bottom" secondItem="gqj-ip-e3M" secondAttribute="top" id="xaD-IN-1sI"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="ylv-sc-lSC" id="s3O-5s-RUe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="70V-c9-glH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5428" y="809"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Myy-4t-13I">
